# 200Model8CLI

./: .gitignore  FEATURES.md  GLOBAL_INSTALL.md  INSTALL.md  LICENSE  NPM_DISTRIBUTION_GUIDE.md  README.md  SECURITY.md  SYSTEM_STATUS.md  WELCOME.md  install.py  package.json  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
scripts/: install-python-deps.js
src/model8cli/: __init__.py  cli.py
src/model8cli/agent/: __init__.py  core.py
src/model8cli/agents/: __init__.py  self_aware_agent.py
src/model8cli/bot/: __init__.py  telegram_bot.py
src/model8cli/core/: __init__.py  api.py  config.py  groq_client.py  models.py  ollama_client.py  session.py
src/model8cli/memory/: __init__.py  memory_store.py  reflection.py  self_improvement.py  skill_engine.py
src/model8cli/scheduler/: __init__.py  scheduler.py
src/model8cli/tools/: __init__.py  base.py  browser_tools.py  code_tools.py  file_ops.py  git_tools.py  github_tools.py  knowledge_tools.py  ollama_tools.py  system_tools.py  web_tools.py  workflow_tools.py
src/model8cli/ui/: __init__.py  banner.py  formatting.py  interactive.py  learning_mode.py
src/model8cli/utils/: __init__.py  helpers.py  logging.py  security.py
src/model8cli/workflows/: __init__.py  workflow_engine.py
